src/test/kalang-snippets/error/GenericInferNullable.kl
expression may be null@2
val list = [1,2]..asList()..at(9 , null);
println(list.intValue());